--- a/app/views/analysis/analysis.html
+++ b/app/views/analysis/analysis.html
@@ -1,1 +1,35 @@
-<div>Hello, this is 统计页面 {{demo}}</div>
+<div class="panel panel-default">
+  <div class="panel-heading">统计条件</div>
+  <div class="panel-body">
+    <form action="" name="analysisQueryForm">
+      <div class="form-group">
+        <label for="xqId" class="control-label">校区：</label>
+        <input id="xqId" type="text" class="form-control" ng-model="analysisQuery.xq"/>
+      </div>
+      <div class="form-group">
+        <lable for="pyccId" class="control-label">培养层次：</lable>
+        <input type="text" class="form-control" id="pyccId" ng-model="analysisQuery.pycc"/>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading">统计列表</div>
+  <div class="panel-body">
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>学号</th>
+        <th>姓名</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="row in stuList">
+        <td>{{row.xh}}</td>
+        <td>{{row.xm}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
