--- a/app/views/stuList/stuList.html
+++ b/app/views/stuList/stuList.html
@@ -1,16 +1,46 @@
-<div class="container-fluid" ng-controller="stuListCtrl">
-  <table st-table="stuList" class="table table-striped" style="width: 600px;">
-    <thead>
-      <tr>
-        <th>学号</th>
-        <th>姓名</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="row in stuList">
-        <td>{{row.xh}}</td>
-        <td>{{row.xm}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div ng-controller="stuListCtrl">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      新生列表
+    </div>
+    <div class="panel-body" style="height: 660px;overflow-y: scroll;">
+      <table st-table="stuList" st-pipe="callServer" class="table table-striped">
+        <thead>
+          <tr>
+            <th>学号</th>
+            <th>姓名</th>
+            <th>性别</th>
+            <th>培养层次</th>
+            <th>学院</th>
+            <th>专业</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-hide="isLoading" ng-repeat="row in stuList">
+            <td>{{row.xh}}</td>
+            <td>{{row.xm}}</td>
+            <td>{{row.xb}}</td>
+            <td>{{row.pycc}}</td>
+            <td>{{row.xy}}</td>
+            <td>{{row.zy}}</td>
+            <td>
+              <button class="btn btn-default btn-sm" ng-click="alert(row)">确认<span class="glyphicon glyphicon-play"></span></button>
+            </td>
+          </tr>
+        </tbody>
+        <tbody ng-show="isLoading">
+          <tr>
+            <td colspan="7" class="text-center">Loading ... </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td class="text-center" st-pagination="" colspan="7">
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
 </div>
